--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <div class="data" id="app">
-        
+    <div id="app">
+
     </div>
 
-    <script type="text/javascript" src="app.js"></script>
+    <!-- <script type="text/javascript" src="app.js"></script> -->
+    <script type="text/javascript" src="asyn.js"></script>
+    <!-- <script type="text/javascript" src="promise.js"></script> -->
+
+
 </body>
 
 </html>
