--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </div>
 
     <!-- <script type="text/javascript" src="app.js"></script> -->
-    <script type="text/javascript" src="asyn.js"></script>
+    <!-- <script type="text/javascript" src="asyn.js"></script> -->
     <!-- <script type="text/javascript" src="promise.js"></script> -->
+    <script type="text/javascript" src="promise-dicoding.js"></script>
+
 
 
 </body>
