--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- <script type="text/javascript" src="app.js"></script> -->
     <!-- <script type="text/javascript" src="asyn.js"></script> -->
     <!-- <script type="text/javascript" src="promise.js"></script> -->
-    <script type="text/javascript" src="promise-dicoding.js"></script>
+    <!-- <script type="text/javascript" src="promise-dicoding.js"></script> -->
+    <script type="text/javascript" src="article.js"></script>
 
 
 
